--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ datasourceone.datasource.password=YtJ7yXEACj4SJUYBcR9slZKNXhd2ZVJD
 datasourcetwo.datasource.url=jdbc:postgresql://castor.db.elephantsql.com/cexwyixh
 datasourcetwo.datasource.username=cexwyixh
 datasourcetwo.datasource.password=2LMjJnQX3lXQlRkhB95PupqJUSBjdNma
+#Kafka
+spring.kafka.bootstrap-servers=
+spring.kafka.message.topicOne="central-platform-dev"
