--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,9 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
         <dependency>
@@ -36,8 +38,6 @@
             <artifactId>spring-kafka</artifactId>
             <version>3.1.1</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
