--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ datasourcetwo.datasource.url=jdbc:postgresql://castor.db.elephantsql.com/cexwyix
 datasourcetwo.datasource.username=cexwyixh
 datasourcetwo.datasource.password=2LMjJnQX3lXQlRkhB95PupqJUSBjdNma
 #Kafka
-spring.kafka.bootstrap-servers=
-spring.kafka.message.topicOne="central-platform-dev"
+spring.kafka.bootstrap-servers=b-1.ackodev-uat-ackostrea.qw6bs5.c3.kafka.ap-south-1.amazonaws.com:9093
+spring.kafka.message.topicOne=central-platform-dev
